--- a/DNA/videos.html
+++ b/DNA/videos.html
@@ -1,1 +1,21 @@
+<html>
+<head>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+<style>::-webkit-scrollbar{width:0px;}</style>
+</head>
+<body style="margin:0;background:black;color:white;">
+<center>
 
+</center>
+
+<iframe style="width:100%;height:35vh;border:0;" src="https://www.youtube.com/embed/qiNCbMrihY4"></iframe>
+<iframe style="width:100%;height:38vh;border:0;" src="https://www.youtube.com/embed/HRVMWhXJlvc"></iframe>
+<iframe style="width:100%;height:37vh;border:0;" src="https://www.youtube.com/embed/l1qmpCRpzMk"></iframe>
+<iframe style="width:100%;height:35vh;border:0;" src="https://www.youtube.com/embed/RRbppibf_XE"></iframe>
+<br><br><br><br>
+<center>
+
+</center>
+
+</body>
+</html>
