--- a/DNA/companies.html
+++ b/DNA/companies.html
@@ -48,6 +48,9 @@ img {width: 100%;}::-webkit-scrollbar{width:0px;}
 <a href="https://www.blender.org/">
  <img src="https://koronaebola.github.io/blender.png"/>
 </a>
-
+<iframe style="width:100%;height:40vh;border:0;" src="https://www.youtube.com/embed/qiNCbMrihY4"></iframe>
+<iframe style="width:100%;height:40vh;border:0;" src="https://www.youtube.com/embed/HRVMWhXJlvc"></iframe>
+<iframe style="width:100%;height:40vh;border:0;" src="https://www.youtube.com/embed/l1qmpCRpzMk"></iframe>
+<iframe style="width:100%;height:40vh;border:0;" src="https://www.youtube.com/embed/RRbppibf_XE"></iframe>
 </body>
 </html>
